tests/reference/asr_preprocess-unterminated_ifndef_01-1761667.stderr
C preprocessor error: Unterminated #ifndef
 --> tests/errors/unterminated_ifndef_01.f90:7:1
  |
7 | 
  | ^ 
